--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="src" path="src/main/api"/>
 	<classpathentry kind="src" path="src/main/wsdl"/>
 	<classpathentry kind="src" path="src/test/munit"/>
+	<classpathentry kind="lib" path="src/main/resources/postgresql-9.4-1201.jdbc4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
