--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+production.properties
+staging.properties
+
 # ------------------------------------------------------------------------------ #
 # Java defaults (https://github.com/github/gitignore/blob/master/Java.gitignore) #
 # ------------------------------------------------------------------------------ #
