Added logic flow of poller

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Wed Aug 24 14:02:43 CEST 2016
+#Thu Aug 25 15:57:59 CEST 2016
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=briefing_api.xml,poller.xml
 domain=default
-config.resources=vrt_avo_transfer.xml
