--- a/src/main/resources/staging.properties.example
+++ b/src/main/resources/staging.properties.example
@@ -16,3 +16,16 @@ db.password=
 db.database=
 db.buffer=
 db.messageevents=
+db.skryv_refresh_token=
+
+skryv.host=
+skryv.client_id=
+skryv.client_secret=
+skryv.username=
+skryv.password=
+
+elasticsearch.host=
+
+proxy.host=
+
+slack.hook=
