Add socket log4j2 to logstash

--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="con" path="MULE_RUNTIME/org.mule.tooling.server.3.8.0.ee"/>
 	<classpathentry kind="src" path="src/main/app"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
@@ -12,5 +11,7 @@
 	<classpathentry kind="src" path="src/test/munit"/>
 	<classpathentry kind="lib" path="src/main/resources/postgresql-9.4-1201.jdbc4.jar"/>
 	<classpathentry kind="con" path="MULE_LIB/AMQP-0-9/mule-transport-amqp-contribution"/>
+	<classpathentry kind="con" path="MULE_LIB/AMQPS-0-9/mule-transport-amqp-contribution"/>
+	<classpathentry exported="true" kind="con" path="MULE_RUNTIME/org.mule.tooling.server.3.7.4.ee"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
