--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,5 @@
-#** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Thu Aug 25 15:57:59 CEST 2016
+#Fri Aug 18 09:17:38 CEST 2017
 redeployment.enabled=true
 encoding=UTF-8
+domain=viaa-domain
 config.resources=briefing_api.xml,poller.xml
-domain=default
