--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <mule.version>3.7.4</mule.version>
+    <mule.version>3.9.0</mule.version>
     <mule.tools.version>1.2</mule.tools.version>
   </properties>
   
@@ -140,7 +140,14 @@
       <artifactId>postgresql</artifactId>
       <version>9.4.1212.jre6</version>
     </dependency>
-  </dependencies>
+  <dependency>
+            <groupId>be.viaa</groupId>
+            <artifactId>viaa-domain</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>test</scope>
+            <type>zip</type>
+        </dependency>
+    </dependencies>
   
   <repositories>
     <repository>
