Changes to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ staging.properties
 # ------------------------------------------------------------------------------ #
 # Java defaults (https://github.com/github/gitignore/blob/master/Java.gitignore) #
 # ------------------------------------------------------------------------------ #
+# Reference: https://github.com/github/gitignore/blob/master/Java.gitignore
 *.class
 
 # Package Files #
@@ -26,9 +27,9 @@ tmp/**/*
 local.properties
 .settings/
 .loadpath
-# You may want to remove the sharp symbols here if you are using Maven 
-#.project
-#.classpath
+# Recommended for Maven based projects 
+.project
+.classpath
 
 # External tool builders
 .externalToolBuilders/
