Changes to .gitignore and removal of mule-app and mule-deploy.properties

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-production.properties
-staging.properties
-
 # ------------------------------------------------------------------------------ #
 # Java defaults (https://github.com/github/gitignore/blob/master/Java.gitignore) #
 # ------------------------------------------------------------------------------ #
-# Reference: https://github.com/github/gitignore/blob/master/Java.gitignore
 *.class
 
 # Package Files #
@@ -50,3 +46,5 @@ local.properties
 flows/
 target/
 **/*.mflow
+catalog/
+*.properties
