--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,4 +1,5 @@
-#Fri Aug 18 09:17:38 CEST 2017
+#** GENERATED CONTENT ** Mule Application Deployment Descriptor
+#Tue Nov 13 13:28:52 CET 2018
 redeployment.enabled=true
 encoding=UTF-8
 domain=viaa-domain
