Revert "Changes to .gitignore and removal of mule-app and mule-deploy.properties"
This reverts commit f6021b3ac8b07aca31070a4419e9c7532e6bc36f.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+production.properties
+staging.properties
+
 # ------------------------------------------------------------------------------ #
 # Java defaults (https://github.com/github/gitignore/blob/master/Java.gitignore) #
 # ------------------------------------------------------------------------------ #
+# Reference: https://github.com/github/gitignore/blob/master/Java.gitignore
 *.class
 
 # Package Files #
@@ -46,5 +50,3 @@ local.properties
 flows/
 target/
 **/*.mflow
-catalog/
-*.properties
