Add ref to global to mule-deploy

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Tue Nov 13 13:28:52 CET 2018
+#Wed Nov 21 23:02:48 CET 2018
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=briefing_api.xml,global.xml,poller.xml
 domain=viaa-domain
-config.resources=briefing_api.xml,poller.xml
