First "fix": simple
- for now: comment out the failing ftp-connector
- replace with payload logger

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,6 @@
-#Fri Aug 18 09:17:38 CEST 2017
+#** GENERATED CONTENT ** Mule Application Deployment Descriptor
+#Wed Mar 13 20:13:27 CET 2019
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=briefing_api.xml,global.xml,poller.xml
 domain=viaa-domain
-config.resources=briefing_api.xml,poller.xml
