--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.mycompany</groupId>
+  <groupId>be.viaa</groupId>
   <artifactId>vrt_avo_transfer</artifactId>
-  <version>0.2.15-SNAPSHOT</version>
+  <version>0.2.16-SNAPSHOT</version>
   <packaging>mule</packaging>
 
   <name>Mule vrt_avo_transfer Application</name>
